app/security/vaultwarden2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
              initialDelaySeconds: 10
              periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
